was translated authors

--- a/AlgorithmAnalysis/KeyTerms.html
+++ b/AlgorithmAnalysis/KeyTerms.html
@@ -320,7 +320,7 @@
 <td>Полный перебор</td>
 </tr>
 <tr class="row-even"><td>Усреднённый случай</td>
-<td>Эксподенциальный</td>
+<td>Экспоненциальный</td>
 <td>Линейный</td>
 </tr>
 <tr class="row-odd"><td>Линейно-логарифмический</td>
@@ -328,7 +328,7 @@
 <td>Порядок величины</td>
 </tr>
 <tr class="row-even"><td>Квадратичный</td>
-<td>ВременнАя сложность</td>
+<td>Временн*а*я сложность</td>
 <td>Наихудший случай</td>
 </tr>
 </tbody>
