--- a/AlgorithmAnalysis/Objectives.html
+++ b/AlgorithmAnalysis/Objectives.html
@@ -314,7 +314,7 @@
 <li>Понять &#8220;большое О&#8221; времени выполнения наиболее распространённых
 операций над списками и словарями в Python.</li>
 <li>Понять, как реализация данных в Python влияет на анализ алгоритмов.</li>
-<li>Понять, как находить критерии для простых программ на Python.</li>
+<li>Понять, как находить критерии оценки для простых программ на Python.</li>
 </ul>
 </div>
 
