--- a/static/pip2/GeneralIntro/SemanticErrors.html
+++ b/static/pip2/GeneralIntro/SemanticErrors.html
@@ -336,7 +336,7 @@ looking at the output of the program and trying to figure out what it is doing.<
             <script>
             $(document).ready(function(){checkRadio('question1_8_1');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('question1_8_1','c',['A semantic error is an error in logic. In this case the program does not produce the correct output because the problem is not solved correctly. This would be considered a run\u002Dtime error.', 'A semantic error is an error in logic. In this case the program does not produce the correct output because the code can not be processed by the compiler or interpreter. This would be considered a syntax error.', 'This will produce the wrong answer because the programmer implemented the solution incorrectly.  This is a semantic error.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('question1_8_1','c',['A semantic error is an error in logic. In this case the program does not produce the correct output because the problem is not solved correctly. This would be considered a run-time error.', 'A semantic error is an error in logic. In this case the program does not produce the correct output because the code can not be processed by the compiler or interpreter. This would be considered a syntax error.', 'This will produce the wrong answer because the programmer implemented the solution incorrectly.  This is a semantic error.'])">Check Me</button>
             <button class='btn btn-default' id="question1_8_1_bcomp" disabled name="compare" onclick="compareAnswers('question1_8_1');">Compare Me</button>
             </form><br />
             <div id="question1_8_1_feedback">
