--- a/static/pip2/GeneralIntro/SpecialWaystoExecutePythoninthisBook.html
+++ b/static/pip2/GeneralIntro/SpecialWaystoExecutePythoninthisBook.html
@@ -507,7 +507,7 @@ $(window).resize(function() {
             <script>
             $(document).ready(function(){checkMultipleSelect('question1_3_2');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMAStorage('question1_3_2','b,d',['In fact, codelens steps through each line one by one as you click, which is MUCH slower than the Python interpreter.', 'By using codelens, you can control the execution of a program step by step.  You can even go backwards!', 'Codelens works only for the pre\u002Dprogrammed examples.', 'By stepping forward through the Python code in codelens, you are executing the Python program.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMAStorage('question1_3_2','b,d',['In fact, codelens steps through each line one by one as you click, which is MUCH slower than the Python interpreter.', 'By using codelens, you can control the execution of a program step by step.  You can even go backwards!', 'Codelens works only for the pre-programmed examples.', 'By stepping forward through the Python code in codelens, you are executing the Python program.'])">Check Me</button>
             <button class='btn btn-default' id="question1_3_2_bcomp" disabled name="compare" onclick="compareAnswers('question1_3_2');">Compare Me</button>
             </form><br />
             <div id="question1_3_2_feedback">
