--- a/static/pip2/SimplePythonData/DataTypes.html
+++ b/static/pip2/SimplePythonData/DataTypes.html
@@ -950,7 +950,7 @@ change might mean something quite different from what you intended.</p>
             <script>
             $(document).ready(function(){checkRadio('test_question2_1_1');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question2_1_1','b',['You may be able to determine the data type based on the printed value, but it may also be  deceptive, like when a string prints, there are no quotes around it.', 'The type function will tell you the class the value belongs to.', 'Only numeric values can be used in equations.', 'In Python variables are not declared. Values, not variables, have types in Python. A variable can even take on values with different types during a program\u0027s execution.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question2_1_1','b',['You may be able to determine the data type based on the printed value, but it may also be  deceptive, like when a string prints, there are no quotes around it.', 'The type function will tell you the class the value belongs to.', 'Only numeric values can be used in equations.', 'In Python variables are not declared. Values, not variables, have types in Python. A variable can even take on values with different types during a program's execution.'])">Check Me</button>
             <button class='btn btn-default' id="test_question2_1_1_bcomp" disabled name="compare" onclick="compareAnswers('test_question2_1_1');">Compare Me</button>
             </form><br />
             <div id="test_question2_1_1_feedback">
