--- a/static/pip2/SimplePythonData/Operators.html
+++ b/static/pip2/SimplePythonData/Operators.html
@@ -735,7 +735,7 @@ Similarly <tt class="docutils literal"><span class="pre">x</span> <span class="p
             <script>
             $(document).ready(function(){checkRadio('test_question2_6_2');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question2_6_2','d',['\u002D The // operator does integer division, not exact divisions', '\u002D Integer division results in truncation, not rounding up.', '\u002D The // operator does integer division, but it yields a float when one of the operands is a float/', '\u002D The // operator does integer division, and  it yields a float when one of the operands is a float.', '\u002D / does division. Perhaps you were thinking of %, which computes the remainder?'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question2_6_2','d',['- The // operator does integer division, not exact divisions', '- Integer division results in truncation, not rounding up.', '- The // operator does integer division, but it yields a float when one of the operands is a float/', '- The // operator does integer division, and  it yields a float when one of the operands is a float.', '- / does division. Perhaps you were thinking of %, which computes the remainder?'])">Check Me</button>
             <button class='btn btn-default' id="test_question2_6_2_bcomp" disabled name="compare" onclick="compareAnswers('test_question2_6_2');">Compare Me</button>
             </form><br />
             <div id="test_question2_6_2_feedback">
