--- a/static/pip2/SimplePythonData/OrderofOperations.html
+++ b/static/pip2/SimplePythonData/OrderofOperations.html
@@ -441,7 +441,7 @@ else{
             <script>
             $(document).ready(function(){checkRadio('test_question2_8_1');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question2_8_1','a',['Using parentheses, the expression is evaluated as (2*5) first, then (10 // 3), then (16\u002D3), and then (13+1).', 'Remember that * has precedence over  \u002D.', 'Remember that // has precedence over \u002D.', 'Remember that // does integer division.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question2_8_1','a',['Using parentheses, the expression is evaluated as (2*5) first, then (10 // 3), then (16-3), and then (13+1).', 'Remember that * has precedence over  -.', 'Remember that // has precedence over -.', 'Remember that // does integer division.'])">Check Me</button>
             <button class='btn btn-default' id="test_question2_8_1_bcomp" disabled name="compare" onclick="compareAnswers('test_question2_8_1');">Compare Me</button>
             </form><br />
             <div id="test_question2_8_1_feedback">
