--- a/static/pip2/SimplePythonData/VariableNamesandKeywords.html
+++ b/static/pip2/SimplePythonData/VariableNamesandKeywords.html
@@ -427,7 +427,7 @@ want it to have.</p>
             <script>
             $(document).ready(function(){checkRadio('test_question2_4_1');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question2_4_1','b',['\u002D  The + character is not allowed in variable names.', '\u002D  The + character is not allowed in variable names (everything else in this name is fine).'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('test_question2_4_1','b',['-  The + character is not allowed in variable names.', '-  The + character is not allowed in variable names (everything else in this name is fine).'])">Check Me</button>
             <button class='btn btn-default' id="test_question2_4_1_bcomp" disabled name="compare" onclick="compareAnswers('test_question2_4_1');">Compare Me</button>
             </form><br />
             <div id="test_question2_4_1_feedback">
