--- a/static/pip2/GeneralIntro/ThePythonProgrammingLanguage.html
+++ b/static/pip2/GeneralIntro/ThePythonProgrammingLanguage.html
@@ -446,7 +446,7 @@ command line.
             <script>
             $(document).ready(function(){checkRadio('question1_2_2');});
             </script>
-            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('question1_2_2','c',['In this case high and low have nothing to do with altitude.', 'High and low have nothing to do with the type of device you are programming for.  Instead, look at what it takes to run the program written in the language.', 'Python is a high level language but must be interpreted into machine code (binary) before it can be executed.', 'While it is true that it is generally easier to program in a high\u002Dlevel language and programs written in a high\u002Dlevel language are usually shorter, this is not always the case.'])">Check Me</button>
+            <button class='btn btn-success' name="do answer" onclick="checkMCMFStorage('question1_2_2','c',['In this case high and low have nothing to do with altitude.', 'High and low have nothing to do with the type of device you are programming for.  Instead, look at what it takes to run the program written in the language.', 'Python is a high level language but must be interpreted into machine code (binary) before it can be executed.', 'While it is true that it is generally easier to program in a high-level language and programs written in a high-level language are usually shorter, this is not always the case.'])">Check Me</button>
             <button class='btn btn-default' id="question1_2_2_bcomp" disabled name="compare" onclick="compareAnswers('question1_2_2');">Compare Me</button>
             </form><br />
             <div id="question1_2_2_feedback">
