--- a/Introduction/WhyStudyDataStructuresandAbstractDataTypes.html
+++ b/Introduction/WhyStudyDataStructuresandAbstractDataTypes.html
@@ -332,7 +332,7 @@
 абстрактный тип данных - это оболочка, с которой работает клиент.
 Реализация скрыта на уровень ниже, и её детали пользователя совершенно не беспокоят.</p>
 <div class="figure align-center" id="fig-adt">
-<a class="reference internal image-reference" href="../_images/adt.png"><img alt="../_images/adt.png" src="../_images/adt.png" /></a>
+<a class="reference internal image-reference" href="../_images/adt.png"><img alt="../_images/adt.png" src="../_images/adt.png" style="width: 130.0px; height: 139.5px;" /></a>
 <p class="caption">Рисунок 2: Абстрактный тип данных</p>
 </div>
 <p>Реализация АТД, часто называемая <strong>структурой данных</strong>,
