fixed the merge sort

--- a/Graphs/AnalysisofDijkstrasAlgorithm.html
+++ b/Graphs/AnalysisofDijkstrasAlgorithm.html
@@ -76,7 +76,7 @@
     <script type="text/javascript" src="../_static/jquery.hotkey.js"></script>
     <script type="text/javascript" src="../_static/jquery-migrate-1.2.1.min.js"></script>
     <link rel="top" title="Problem Solving with Algorithms and Data Structures" href="../index.html" />
-    <link rel="next" title="Алгоритм Прима для островного дерева" href="PrimsSpanningTreeAlgorithm.html" />
+    <link rel="next" title="Алгоритм Прима для остовного дерева" href="PrimsSpanningTreeAlgorithm.html" />
     <link rel="prev" title="Алгоритм Дейкстры" href="DijkstrasAlgorithm.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
@@ -275,7 +275,7 @@
     </a>
   </li>
   
-  <li id="relations-next" title='Next Chapter - Алгоритм Прима для островного дерева' data-toggle="tooltip" >
+  <li id="relations-next" title='Next Chapter - Алгоритм Прима для остовного дерева' data-toggle="tooltip" >
     <a href="PrimsSpanningTreeAlgorithm.html" >
       <i class='glyphicon glyphicon-forward' style='opacity:0.9;'></i>
     </a>
@@ -321,12 +321,12 @@
   </li>
   <a class="navLinkBg" id="navLinkBgLeft"  href="DijkstrasAlgorithm.html" ></a>
   
-  <li id="relations-next" class="navLink" title='Next Section - Алгоритм Прима для островного дерева' data-toggle="tooltip" >
+  <li id="relations-next" class="navLink" title='Next Section - Алгоритм Прима для остовного дерева' data-toggle="tooltip" >
     <a href="PrimsSpanningTreeAlgorithm.html" >
       <i id="relationsNextIcon" class='nextNav glyphicon glyphicon-chevron-right'></i>
     </a>
   </li>
-  <a class="navLinkBg navLink" id="navLinkBgRight" href="PrimsSpanningTreeAlgorithm.html" >Next Section - Алгоритм Прима для островного дерева</a>
+  <a class="navLinkBg navLink" id="navLinkBgRight" href="PrimsSpanningTreeAlgorithm.html" >Next Section - Алгоритм Прима для остовного дерева</a>
 
 <script type="text/javascript">
 
