--- a/Trees/TreeTraversals.html
+++ b/Trees/TreeTraversals.html
@@ -76,7 +76,7 @@
     <script type="text/javascript" src="../_static/jquery.hotkey.js"></script>
     <script type="text/javascript" src="../_static/jquery-migrate-1.2.1.min.js"></script>
     <link rel="top" title="Problem Solving with Algorithms and Data Structures" href="../index.html" />
-    <link rel="next" title="Очереди с приоритетом на рснове двоичной кучи" href="PriorityQueueswithBinaryHeaps.html" />
+    <link rel="next" title="Очереди с приоритетом на основе двоичной кучи" href="PriorityQueueswithBinaryHeaps.html" />
     <link rel="prev" title="Дерево синтаксического разбора" href="ParseTree.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
@@ -275,7 +275,7 @@
     </a>
   </li>
   
-  <li id="relations-next" title='Next Chapter - Очереди с приоритетом на рснове двоичной кучи' data-toggle="tooltip" >
+  <li id="relations-next" title='Next Chapter - Очереди с приоритетом на основе двоичной кучи' data-toggle="tooltip" >
     <a href="PriorityQueueswithBinaryHeaps.html" >
       <i class='glyphicon glyphicon-forward' style='opacity:0.9;'></i>
     </a>
@@ -412,12 +412,12 @@
   </li>
   <a class="navLinkBg" id="navLinkBgLeft"  href="ParseTree.html" ></a>
   
-  <li id="relations-next" class="navLink" title='Next Section - Очереди с приоритетом на рснове двоичной кучи' data-toggle="tooltip" >
+  <li id="relations-next" class="navLink" title='Next Section - Очереди с приоритетом на основе двоичной кучи' data-toggle="tooltip" >
     <a href="PriorityQueueswithBinaryHeaps.html" >
       <i id="relationsNextIcon" class='nextNav glyphicon glyphicon-chevron-right'></i>
     </a>
   </li>
-  <a class="navLinkBg navLink" id="navLinkBgRight" href="PriorityQueueswithBinaryHeaps.html" >Next Section - Очереди с приоритетом на рснове двоичной кучи</a>
+  <a class="navLinkBg navLink" id="navLinkBgRight" href="PriorityQueueswithBinaryHeaps.html" >Next Section - Очереди с приоритетом на основе двоичной кучи</a>
 
 <script type="text/javascript">
 
